# beyonnex_test_task

./: pyproject.toml
src/pages/: cart.py  confirmation.py  order.py  payment.py  weather_shopper.py
tests/: conftest.py  test_web.py
