[tool.poetry]
name = "beyonnex-test-task"
version = "0.1.0"
description = ""
authors = ["Sergey Chelyuk <bormot87@gmail.com>"]
readme = "README.md"
packages = [{include = "beyonnex_test_task"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
selenium = "^4.11.2"
webdriver-manager = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
